vdpau: Set the vendor string
Issue: OCP_2535

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,14 @@ script_tmpl = 'import shutil; shutil.copy("@0@", "@1@")'
 run_command(python, '-c',
             script_tmpl.format('common/hooks/pre-commit.hook', '.git/hooks/pre-commit'))
 
+version_arr = meson.project_version().split('.')
+flu_va_drivers_major_version = version_arr[0]
+flu_va_drivers_minor_version = version_arr[1]
+flu_va_drivers_micro_version = version_arr[2]
+flu_va_drivers_version = '@0@.@1@.@2@'.format(flu_va_drivers_major_version,
+                                              flu_va_drivers_minor_version,
+                                              flu_va_drivers_micro_version)
+
 libva_version = '>= 1.10.0'
 libva_dep = dependency('libva', version : libva_version)
 
