--- a/src/meson.build
+++ b/src/meson.build
@@ -1,13 +1,3 @@
-sources = [
-  'flu_va_drivers_vdpau.c',
-  'flu_va_drivers_utils.c',
-]
-
-headers = [
-  'flu_va_drivers_vdpau.h',
-  'flu_va_drivers_utils.h',
-]
-
 config = configuration_data()
 init_func_name = '__vaDriverInit_@0@_@1@'.format(libva_major_version,
                                                  libva_minor_version)
@@ -21,12 +11,26 @@ config.set('VA_MAJOR_VERSION', libva_major_version)
 config.set('VA_MINOR_VERSION', libva_minor_version)
 config_file = configure_file(output: 'config.h', configuration: config)
 
-flu_va_drivers_vdpau_drv_video = shared_module(
-  'flu_va_drivers_vdpau_drv_video',
-  name_prefix : '',
-  install : true,
-  install_dir : libva_driver_dir,
-  sources: [sources, headers, config_file],
-  c_args: ['-DHAVE_CONFIG_H'],
-  dependencies : [libva_dep]
-)
+vdpau_dep = dependency('vdpau', version : '>= 1.1.1')
+
+if get_option('vdpau').enabled() and vdpau_dep.found()
+  sources = [
+    'flu_va_drivers_vdpau.c',
+    'flu_va_drivers_utils.c',
+  ]
+
+  headers = [
+    'flu_va_drivers_vdpau.h',
+    'flu_va_drivers_utils.h',
+  ]
+
+  flu_va_drivers_vdpau_drv_video = shared_module(
+    'flu_va_drivers_vdpau_drv_video',
+    name_prefix : '',
+    install : true,
+    install_dir : libva_driver_dir,
+    sources: [sources, headers, config_file],
+    c_args: ['-DHAVE_CONFIG_H'],
+    dependencies : [libva_dep, vdpau_dep]
+  )
+endif
