--- a/src/meson.build
+++ b/src/meson.build
@@ -18,6 +18,7 @@ if get_option('vdpau').enabled() and vdpau_dep.found()
     'flu_va_drivers_vdpau.c',
     'flu_va_drivers_vdpau_vdp_device_impl.c',
     'flu_va_drivers_utils.c',
+    'flu_va_drivers_vdpau_utils.c',
     '../ext/intel/intel-vaapi-drivers/object_heap.c'
   ]
 
@@ -25,6 +26,7 @@ if get_option('vdpau').enabled() and vdpau_dep.found()
     'flu_va_drivers_vdpau.h',
     'flu_va_drivers_vdpau_vdp_device_impl.h',
     'flu_va_drivers_utils.h',
+    'flu_va_drivers_vdpau_utils.h',
     '../ext/intel/intel-vaapi-drivers/object_heap.h',
     '../ext/intel/intel-vaapi-drivers/i965_mutext.h',
     '../ext/intel/intel-vaapi-drivers/intel_compiler.h'
