--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
 option('driverdir', type : 'string', description : 'libva drivers path')
-option('vdpau', type : 'feature', value : 'auto', description : 'Build vdpau bridge')
+option('vdpau', type : 'feature', value : 'enabled', description : 'Build vdpau bridge')
 
