build: Check for submodule "common" in meson configuration
Fail to configure if the submodule "common" is not cloned.

Issue: OCP_2903

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,11 @@ script_tmpl = 'import shutil; shutil.copy("@0@", "@1@")'
 run_command(python, '-c',
             script_tmpl.format('common/hooks/pre-commit.hook', '.git/hooks/pre-commit'))
 
+fs = import('fs')
+if not fs.is_file('common/.git')
+  error('The submodule "common" is missing. Try "git submodule update --init"')
+endif
+
 version_arr = meson.project_version().split('.')
 flu_va_drivers_major_version = version_arr[0]
 flu_va_drivers_minor_version = version_arr[1]
