--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -10,7 +10,7 @@ DRIVERS = [
 
 FLUSTER_CONFIG = [
     'vdpau': [
-        decoder: 'FFmpeg-H.264-VAAPI',
+        decoder: 'Fluendo-H.264-HW-Gst1.0',
         ts: 'JVT-AVC_V1',
         th: 54,
         tth: 2 * 60
@@ -109,6 +109,27 @@ node(DEFAULT_NODE) {
 
                 unstash(driver)
                 sh (script: "sudo apt install --reinstall -y ${env.WORKSPACE}/${outputDirInWS}/*.deb", label:"Install ${}")
+
+                def gstPluginPath = "${env.WORKSPACE}/plugins"
+                sh(script: "mkdir -p ${gstPluginPath}", label: 'Setup Fluster: Create GST_PLUGIN_PATH for Fluster')
+
+                checkoutCerbero()
+                dir('fluendo-cerbero') {
+                    withCredentials([[$class: 'UsernamePasswordMultiBinding',
+                                      credentialsId: 'backoffice',
+                                      usernameVariable: 'USERNAME',
+                                      passwordVariable: 'PASSWORD']]) {
+                        sh(script: (
+                            './cerbero-uninstalled -c projects/codecs/1.0/native.cbc fetch-codecs ' +
+                            '-t custom -s linux -g 1.0 -a x86_64 flu-plugins-gst-fluendo-vadec-h264-1.0 ' +
+                            '--username \$USERNAME --password \$PASSWORD ' +
+                            "-o ${gstPluginPath}"),
+                           label: 'Setup Fluster: Fetch fluvadec to GST_PLUGIN_PATH')
+                    }
+                }
+
+                sh(script: "ls -al ${gstPluginPath}", label: 'ls gstPluginPath')
+
                 dir(fluster.repoDir) {
                     def vaapiLogDir = "${logDir}/vaapi"
 
@@ -120,11 +141,15 @@ node(DEFAULT_NODE) {
                         // FIXME: fluendo-cerbero's flu-va-driver package should install into proper drivers path.
                         'LIBVA_DRIVERS_PATH=/usr/lib/dri/',
                         "LIBVA_DRIVER_NAME=${driverName}",
+                        'FLUVADEC_HW_BACKEND=vaapi',
+                        "GST_PLUGIN_PATH=${gstPluginPath}",
                     ]) {
                         def thArg = fluster.th  ? "-th ${fluster.th}" : ""
                         def tthArg = fluster.tth  ? "-tth ${fluster.tth}" : ""
 
                         sh(script: 'vainfo', label: 'Run vainfo')
+                        sh(script: 'gst-inspect-1.0 fluvadec', label: 'Run gst-inspect-1.0')
+
                         sh(
                             script: (
                                 "./fluster.py ${fluster.mainArgs} run -t 60 -ts ${fluster.ts} " +
