vainfo: Show full version
Currently we were parsing the version, but there is no need to
parse. This will allow to have versions like x.y.z-dev

Issue: OCP_3084

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,9 +2,7 @@ config = configuration_data()
 init_func_name = '__vaDriverInit_@0@_@1@'.format(libva_major_version,
                                                  libva_minor_version)
 config.set('FLU_VA_DRIVERS_DRIVER_INIT', init_func_name)
-config.set('FLU_VA_DRIVERS_MAJOR_VERSION', flu_va_drivers_major_version)
-config.set('FLU_VA_DRIVERS_MINOR_VERSION', flu_va_drivers_minor_version)
-config.set('FLU_VA_DRIVERS_MICRO_VERSION', flu_va_drivers_micro_version)
+config.set_quoted('FLU_VA_DRIVERS_PROJECT_VERSION', meson.project_version())
 config.set_quoted('FLU_VA_DRIVERS_VENDOR', 'Fluendo S.A.')
 config.set_quoted('FLU_VA_DRIVERS_COMMERCIAL_NAME', meson.project_name())
 config.set('VA_MAJOR_VERSION', libva_major_version)
