ci: Fix bad operator
Issue: OCP_3306

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -353,5 +353,5 @@ def flusterDownloadTS(fluster) {
 }
 
 def isRelease(tagName) {
-    return tagName && tagName != 'master' && tagName =~ RELEASE_TAG_PATTERN
+    return tagName && tagName != 'master' && tagName ==~ RELEASE_TAG_PATTERN
 }
