ci: Allow CI to install older versions
Sometimes, the hash of one package already installed in the node
may be 3a919c13, but the hash in a new job may be 19959b91, but
19959b91 < 3a919c13, so apt complained that it is not possible to
downgrade the package.

This commit allow downgrades for such cases.

Issue: OCP_3303

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -160,7 +160,7 @@ node(DEFAULT_NODE) {
                 flusterDownloadTS(fluster)
 
                 unstash(driver)
-                sh(script: "sudo apt install --reinstall -y ${env.WORKSPACE}/${outputDirInWS}/debian/*.deb",
+                sh(script: "sudo apt install --reinstall --allow-downgrades -y ${env.WORKSPACE}/${outputDirInWS}/debian/*.deb",
                    label:"Install ${}")
 
                 def gstPluginPath = "${env.WORKSPACE}/plugins"
